# HelbreathRaylib

./: .gitignore  CMakeLists.txt  CMakeLists_fetchcontent.txt  HOWTO.txt  HelbreathRaylib.sln  HelbreathRaylib.slnx  Makefile  PLATFORM_ARCHITECTURE.md  app_mainloop.patch  build_web.ps1  serve.ps1  serve.py  serve_web.ps1  serve_web.py  shell.html
.claude/: settings.local.json
.github/workflows/: deploy.yml
Binaries/Game/DATA/: ItemMetadata.json
Binaries/Game/MAPDATA/: 2ndmiddle.mtd  ARESDEN.mtd  Abaddon.mtd  BTField.mtd  Cmdhall_1.mtd  Cmdhall_2.mtd  DruncnCity.mtd  ELVINE.mtd  GodH.mtd  HRampart.mtd  Resurr1.mtd  Resurr2.mtd  Toh1.mtd  Toh2.mtd  Toh3.mtd  arebrk11.mtd  arebrk12.mtd  arebrk21.mtd  arebrk22.mtd  arefarm.mtd  arejail.mtd  aresdend1.mtd  areuni.mtd  arewrhus.mtd  bisle.mtd  bsmith_1.mtd  bsmith_1f.mtd  bsmith_2.mtd  bsmith_2f.mtd  cath_1.mtd  cath_2.mtd  cityhall_1.mtd  cityhall_2.mtd  default.mtd  dglv2.mtd  dglv3.mtd  dglv4.mtd  elvbrk11.mtd  elvbrk12.mtd  elvbrk21.mtd  (+39 more)
Binaries/Game/SPRITES/: Interface.pak  Scenes.pak  dialog_text.pak  game_dialog.pak  item_atlas.pak
Binaries/Game/SPRITES_OLD/: ABS.pak  Amp.pak  Ant.pak  BG.pak  Beholder.pak  Bunny.pak  CanPlant.pak  Cat.pak  Clawturtle.pak  Crop.pak  CruEffect1.pak  CruObj1.pak  Cyc.pak  Devlin.pak  DialogText.pak  DireBoar.pak  Effect12.pak  Effect8.pak  GMG.pak  GT-Arrow.pak  GT-Cannon.pak  GameDialog.pak  GiantCrayfish.pak  GiantLizard.pak  Guard.pak  Howard.pak  LWB.pak  MAxe1.pak  MAxe2.pak  MAxe4.pak  MAxe5.pak  MAxe6.pak  MBHammer.pak  MBabHammer.pak  MBerserkWand.pak  MCHoses.pak  MCMail.pak  MDebastator.pak  MDirectBow.pak  MFireBow.pak  (+93 more)
Binaries/Old/Server/: Config.json
Binaries/Old/Server2/: Config.json
Binaries/SPRITES_OLD/: ACannon.pak  Babarian.pak  Barlog.pak  Bm.pak  Bw.pak  CBTurret.pak  Catapult.pak  Centaurus.pak  Cla.pak  DarkElf.pak  DarkKnight.pak  Demon.pak  Detector.pak  EFFECT.PAK  EFFECT2.PAK  EFFECT3.PAK  ESG.pak  Effect11.pak  Effect13.pak  Effect7.pak  ElfMaster.pak  Ettin.pak  GHK.pak  GHKABS.pak  GOL.PAK  Gandlf.pak  GiantFrog.pak  GiantPlant.pak  HBTank.pak  Helb.pak  Hellclaw.pak  IceGolem.pak  Kennedy.pak  Liche.pak  LoginDialog.pak  MAxe3.pak  MBShadowSword.pak  MDarkExec.pak  MHCap1.pak  MHCap2.pak  (+119 more)
Binaries/Working/Item-ground/: item-ground_rectangles_0.json  item-ground_rectangles_1.json  item-ground_rectangles_10.json  item-ground_rectangles_11.json  item-ground_rectangles_12.json  item-ground_rectangles_13.json  item-ground_rectangles_14.json  item-ground_rectangles_15.json  item-ground_rectangles_16.json  item-ground_rectangles_17.json  item-ground_rectangles_18.json  item-ground_rectangles_19.json  item-ground_rectangles_2.json  item-ground_rectangles_3.json  item-ground_rectangles_4.json  item-ground_rectangles_5.json  item-ground_rectangles_6.json  item-ground_rectangles_7.json  item-ground_rectangles_8.json  item-ground_rectangles_9.json
Binaries/Working/item-pack/: item-pack_rectangles_0.json  item-pack_rectangles_1.json  item-pack_rectangles_10.json  item-pack_rectangles_11.json  item-pack_rectangles_12.json  item-pack_rectangles_13.json  item-pack_rectangles_14.json  item-pack_rectangles_15.json  item-pack_rectangles_16.json  item-pack_rectangles_17.json  item-pack_rectangles_18.json  item-pack_rectangles_19.json  item-pack_rectangles_2.json  item-pack_rectangles_3.json  item-pack_rectangles_4.json  (+5 more)
Dependencies/Includes/: raylib_include.h
HelbreathRaylib/: Game.cpp  Game.h  Helbreath.cpp  Helbreath.h  HelbreathRaylib.vcxproj  HelbreathRaylib.vcxproj.filters  main.cpp
HelbreathRaylib/core/: Application.cpp  Application.h  Dependency.h  Event.h  Font.cpp  Font.h  Layer.cpp  Layer.h  Scene.cpp  Scene.h  Window.cpp  Window.h
HelbreathRaylib/scenes/: GameplayScene.cpp  GameplayScene.h  MenuScene.cpp  MenuScene.h  PauseScene.cpp  PauseScene.h
Sources/: Database.h  TableModel.h
Sources/GenerateItemIDHeader/: Program.cs
Sources/HelbreathRaylib/: Animation.h  Application.cpp  Application.h  ApplicationEvents.h  ApplicationLayer.h  CMap.cpp  CMap.h  CharacterSelectionScene.cpp  CharacterSelectionScene.h  Colors.h  CreateCharacterScene.cpp  CreateCharacterScene.h  EntityGUID.h  EntityManager.h  Event.h  ExitGameScene.cpp  ExitGameScene.h  FontIDs.h  FontManager.cpp  FontManager.h  FontSystem.cpp  FontSystem.h  Game.cpp  Game.h  GameEvents.h  Helbreath.cpp  Helbreath.h  HelbreathRaylib.vcxproj  HelbreathRaylib.vcxproj.filters  IDs.h  ItemMetadata.h  Layer.h  LoadingScene.cpp  LoadingScene.h  MainGameScene.cpp  MainGameScene.h  MainMenuScene.cpp  MainMenuScene.h  MapIDs.h  MusicIDs.h  (+23 more)
web_build/: CMakeLists.txt  shell.html
(+6502 files in other folders)
